# Linera_i3_app

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  LICENSE  README.md  account-dropdown.css  account-dropdown.js  api-manager.js  benchmark.css  benchmark.html  benchmark.js  canvas.css  canvas.html  canvas.js  chains.js  cleanup.js  config.js  contract-config.js  firebase-test.js  firebase.json  firestore-temp.rules  firestore.rules  index.html  interactive.html  linera-wallet.js  mcp-client.js  model-data.js  model-embeddings.json  modelverse-buttons.css  modelverse.css  modelverse.html  modelverse.js  myassets.css  myassets.html  myassets.js  mycart.css  mycart.html  mycart.js  (+18 more)
.firebase/: hosting.ZGlzdA.cache
contract/: deployed-addresses.json  hardhat-audit.config.js  package-lock.json  package.json  transfer-tokens.js  verify-opbnb-transfer.js  verify-transfer.js
contract/contracts/: I3CheckInCore.sol  I3Token.sol
contract/scripts/: deploy-audit.js
data/: billing-entries.json
public/: README.md  bsc-testnet-guide.js  firebase-config.js  firebase-storage-test.html  firebase-test.html  mcp-client-solana-backup.js  mcp-client.js
scripts/: copy-static.js  gen-model-embeddings.js  gen_model_embeddings.py
server/mcp/: auto-router.js  config.js  payments.js  router.js  solana-verifier.js  store.js
solana/: Anchor.toml  Anchor.toml.bak  Cargo.toml
solana/idl/: checkin.json
solana/programs/checkin/: Cargo.toml
solana/programs/checkin/src/: lib.rs  lib.rs.bak
src/: firebase-config.example.js  firebase-config.js  google-auth.js
(+2 files in other folders)
